Выделил работу с категориями в отдельный контроллер, добавил ещё DTO, разбил по папкам

--- a/MiniBar/src/Minibar.Controllers/Minibar.Controllers.csproj
+++ b/MiniBar/src/Minibar.Controllers/Minibar.Controllers.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Minibar.Application\Minibar.Application.csproj" />
     <ProjectReference Include="..\Minibar.Contracts\Minibar.Contracts.csproj" />
     <ProjectReference Include="..\Minibar_Entities\Minibar.Entities.csproj" />
   </ItemGroup>
