--- a/MiniBar/src/Minibar.Web/Minibar.Web.csproj
+++ b/MiniBar/src/Minibar.Web/Minibar.Web.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Minibar.Application\Minibar.Application.csproj" />
     <ProjectReference Include="..\Minibar.Contracts\Minibar.Contracts.csproj" />
     <ProjectReference Include="..\Minibar.Controllers\Minibar.Controllers.csproj" />
+    <ProjectReference Include="..\Minibar.Infrastructure.PostgreSQL\Minibar.Infrastructure.PostgreSQL.csproj" />
     <ProjectReference Include="..\Minibar_Entities\Minibar.Entities.csproj" />
   </ItemGroup>
 
